# Wave_Reflection_Coefficient

./: .gitignore  .impeccable.md  .reflection_coefficient.json  CLAUDE.md  LICENSE  README.md  pyproject.toml
.claude/skills/raise-issue/: SKILL.md
.impeccable/: streamlit-app.md
scripts/: init_project.py  run_analysis.py  streamlit_app.py
src/reflection_coefficient/: __init__.py  analysis.py  calibration.py  cn_correction.py  init_project.py  io.py  irregular_report.py  pipeline.py  preprocessing.py  rw_report.py  utils.py
src/reflection_coefficient/methods/: __init__.py  goda.py  least_squares.py
tests/: test_calibration.py  test_cn_correction.py  test_header_parsing.py  test_pipeline.py  test_smoke.py
