[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "reflection_coefficient"
version = "0.1.0"
description = "Compute wave tank reflection coefficients from experimental probe data."
readme = "README.md"
license = { file = "LICENSE" }
authors = [
    { name = "Ryan You" },
]
requires-python = ">=3.10"
dependencies = [
    "numpy",
    "scipy",
    "pandas",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "ruff",
]

app = ["streamlit"]

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100
